k8s/hotelbookingbackendk8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelbookingbackendapp-deployment
spec:
  selector:
    matchLabels:
      app: hotelbookingbackendapp
  replicas: 1
  template:
    metadata:
      labels:
        app: hotelbookingbackendapp
    spec:
      containers:
        - name: hotelbookingbackendapp
          image: abdiaoo/hotelbookingbackendapp:latest
          ports:
            - containerPort: 8070
---
apiVersion: v1
kind: Service
metadata:
  name: hotelbookingbackendapp-service
spec:
  selector:
    app: hotelbookingbackendapp
  ports:
    - port: 8070
      targetPort: 8070
      protocol: TCP
  type: NodePort
