k8s/hotelbookingfrontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelbookingwebapp-deployment
spec:
  selector:
    matchLabels:
      app: hotelbookingwebapp
  replicas: 1
  template:
    metadata:
      labels:
        app: hotelbookingwebapp
    spec:
      containers:
        - name: hotelbookingwebapp
          image: abdiaoo/hotelbooking-webapp:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: hotelbookingwebapp
spec:
  type: ClusterIP
  selector:
    app: hotelbookingwebapp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
