k8s/deploytok8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelbookingbackendapp-deployment
spec:
  selector:
    matchLabels:
      app: hotelbookingbackendapp
  replicas: 1
  template:
    metadata:
      labels:
        app: hotelbookingbackendapp
    spec:
      containers:
        - name: hotelbookingbackendapp
          image: abdiaoo/hotelbookingbackendapp:latest
          ports:
            - containerPort: 8070
---
kind: Service
apiVersion: v1
metadata:
  name: hotelbookingbackendapp-service
  labels:
    name: hotelbookingbackendapp-service
spec:
  ports:
    - nodePort: 30163
      port: 8070
      targetPort: 8070
      protocol: TCP
  selector:
    app: hotelbookingbackendapp
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelbookingwebapp-deployment
  labels:
    app: hotelbookingwebapp
spec:
  selector:
    matchLabels:
      app: hotelbookingwebapp
  replicas: 1
  template:
    metadata:
      labels:
        app: hotelbookingwebapp
    spec:
      containers:
        - name: hotelbookingwebapp
          image: abdiaoo/hotelbookingwebapp:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: hotelbookingwebapp-service
  labels:
    name: hotelbookingwebapp-service
spec:
  selector:
    role: hotelbookingwebapp
  ports:
    - protocol: TCP
      port: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotelbooking-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hotelbooking
      http:
        paths:
          - backend:
              service:
                name: hotelbookingwebapp-service
                port:
                  number: 8081
            path: /
            pathType: Prefix
