k8s/hotelbookingingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotelbooking-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hotelbookingclient-service
                port:
                  number: 8081
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hotelbookingapi-service
                port:
                  number: 8070
